# havencat

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
apps/: .gitignore  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
apps/android/app/: build.gradle.kts
apps/ios/Runner/: Info.plist
apps/ios/Runner.xcodeproj/: project.pbxproj
apps/lib/: app.dart  branding.dart  main.dart  providers.dart
apps/lib/models/: conversation.dart  message.dart
apps/lib/server/: app_config.dart  app_config_native.dart  app_config_web.dart  env.dart  (+6 more)
apps/linux/: CMakeLists.txt
apps/rust_builder/: pubspec.yaml
apps/test/: chat_input_pulse_direction_test.dart  chatgpt_oauth_flow_test.dart  codex_subscription_test.dart  compaction_test.dart  http_web_retrieval_adapter_test.dart  llm_endpoint_test.dart  llm_proxy_test.dart  model_selector_test.dart  models_catalog_canonical_test.dart  persistence_test.dart  pricing_viewmodel_test.dart  settings_test.dart  tool_call_loop_test.dart  web_search_tools_test.dart  widget_test.dart
apps/web/: index.html  manifest.json
apps/windows/: CMakeLists.txt
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: conversations.rs  mod.rs  simple.rs  web_retrieval.rs
rust/src/conversations/: db.rs  error.rs  schema.sql
rust/src/web_retrieval/: cache.rs  db.rs  error.rs  html.rs  merge.rs  mod.rs  orchestrator.rs  provider.rs  schema.sql
rust/src/web_retrieval/providers/: direct_http.rs  exa_mcp.rs  jina_reader.rs  mod.rs  searxng.rs
(+113 files in other folders)
