[package]
name = "app_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
async-trait = "0.1.89"
flutter_rust_bridge = "=2.13.0-beta.4"
futures-util = "0.3.32"
html2text = "0.17.1"
once_cell = "1.21.4"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json", "gzip"] }
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-rusqlite = { version = "0.7.0", features = ["bundled"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
